[gd_scene load_steps=12 format=2]

[ext_resource path="res://models/Coin.obj" type="ArrayMesh" id=1]
[ext_resource path="res://sounds/CoinToss.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Weapons/AutoSlowReloadGun.gd" type="Script" id=3]
[ext_resource path="res://sprites/CoinCounter.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Fire"
length = 0.333
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0.27126, 0.233937, 0, 0, 0.972252, 1, 1, 1, 0.2, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("../Particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../FireSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.5, 1, 0, -0.0178281, 0.00393152, 0.0147475, 0, 0, 0.999891, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 1, 1, 0.298039, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )
width = 4

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 1, 0 )
spread = 24.55
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.49
angular_velocity = 720.0
angular_velocity_random = 1.0
tangential_accel = 45.45
angle_random = 1.0
scale = 0.25
scale_random = 1.0
color_ramp = SubResource( 10 )
hue_variation = -1.0

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0.94902, 0, 1 )

[sub_resource type="PrismMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.5, 0.5, 0.5 )

[node name="Coin" type="Spatial"]
script = ExtResource( 3 )
weapon_name = "Coin"
left_hand = true
ammo = 4
ammo_change = 1
reload_time = 3.333
reload_change = 1
max_ammo = 4
fire_break_time = 0.333
accuracy_initial = 1.0
accuracy_held = 1.0
accuracy_lerp = 1.0

[node name="BulletFirePosition" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.417657, -0.689414 )
enabled = true
cast_to = Vector3( 0, 0, -500 )
collision_mask = 77

[node name="CoinAimAngle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977907, -1.35823 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.890547, -0.454891, 0, 0.454891, 0.890547, 0, 0, 0.27126 )
mesh = ExtResource( 1 )

[node name="AmmoCounter" type="Sprite3D" parent="Model"]
transform = Transform( 1, 0, 0, 0, 0.854694, 0.519131, 0, -0.519131, 0.854694, 0, 0.382908, 0.684499 )
pixel_size = 0.006
texture = ExtResource( 4 )
hframes = 5

[node name="ReloadTimer" type="Timer" parent="."]

[node name="FirePauseTimer" type="Timer" parent="."]

[node name="Animations" type="AnimationPlayer" parent="."]
root_node = NodePath("../Model")
anims/Fire = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24405, 0, 0.117412 )
amount = 10
one_shot = true
explosiveness = 1.0
fract_delta = false
visibility_aabb = AABB( -1.58652, -1.316, -1.49013, 3.173, 2.63201, 2.98026 )
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 8 )

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.11867 )
stream = ExtResource( 2 )
unit_db = 8.0
max_db = 6.0
